--- a/01-emmet/16-challenge.html
+++ b/01-emmet/16-challenge.html
@@ -1,3 +1,36 @@
-<header id="header">
-    <nav class="navbar navbar-inverse navbar-fixed-top"></nav>
-</header>
+<head>
+    <header id="header">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collpase" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span> 
+                        <span class="icon-bar"></span> 
+                        <span class="icon-bar"></span> 
+                    
+                    </button>
+                    <a href="index.php" class="navbar-brand">
+                        <img src="imgs/logo.png" alt="">
+                    </a>
+                </div>
+                <div class="collapse nvbar-collapse navbar-right">
+                    <ul class="nav navbar-nv">
+                        <li>
+                            <a href="index.html" class="link">Inicio</a>
+                        </li>
+                        <li class="active link">
+                            <a href="login.html">Ingresar</a>
+                        </li>
+                        <li>
+                            <a href="registro.html" class="link">Registrarse</a>
+                        </li>
+                        <li>
+                            <a href="contacto.html" class="link">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+</head>
