--- a/03-CSS/index.html
+++ b/03-CSS/index.html
@@ -20,7 +20,13 @@
                     <li><a href="03-attr-style.html"><span>03</span> Attribute Style</a></li>
                     <li><a href="04-basic-selectors.html"><span>04</span> Basic Selectors</a></li>
                     <li><a href="05-advanced-selectors.html"><span>05</span> Advanced Selectors</a></li>
-                    <li><a href="06-specificity.html"><span>06</span>Specificity </a></li>
+                    <li><a href="06-specificity.html"><span>06</span> Specificity </a></li>
+                    <li><a href="07-inheritance.html"><span>07</span> Inheritance </a></li>
+                    <li><a href="08-relative-units.html"><span>08</span> Relative Units </a></li>
+                    <li><a href="09-absolute-units.html"><span>09</span> Absolute Units </a></li>
+                    <li><a href="10-percentage-units.html"><span>10</span> Porcentage Units </a></li>
+                    <li><a href="11-colors-name.html"><span>11</span> Colors Name </a></li>
+
 
                 </ul>
             </nav>
