--- a/03-CSS/21-Border.html
+++ b/03-CSS/21-Border.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Padding</title>
+    <title>Border</title>
     <link rel="stylesheet" href="css/main.css">
     <style>
        section div {
@@ -57,7 +57,7 @@
 <body>
     <main>
         <header>
-            <h1> <a href="./">🔴</a> Padding</h1>
+            <h1> <a href="./">🔴</a> Border</h1>
         </header>
         <section>
             <div class="box1">
