--- a/03-CSS/index.html
+++ b/03-CSS/index.html
@@ -36,8 +36,37 @@
                     <li><a href="19-margin.html"><span>19</span> Margin </a></li>
                     <li><a href="20-padding.html"><span>20</span> Padding </a></li>
                     <li><a href="21-Border.html"><span>21</span> Border </a></li>
-
-
+                    <li><a href="22-real-box-size.html"><span>22</span> Real box size</a></li>
+                    <li><a href="23-bg-color.html"><span>23</span> Bg color</a></li>
+                    <li><a href="24-bg-image.html"><span>24</span> Bg image</a></li>
+                    <li><a href="25-bg-repeat.html"><span>25</span> Bg repeat</a></li>
+                    <li><a href="26-bg-position.html"><span>26</span> Bg position</a></li>
+                    <li><a href="27-bg-attachment.html"><span>27</span> Bg ttachment</a></li>
+                    <li><a href="28-bg-shorthand.html"><span>28</span> Bg shorthand</a></li>
+                    <li><a href="29-position-static.html"><span>29</span> position static</a></li>
+                    <li><a href="30-position-relative.html"><span>30</span> Position relative</a></li>
+                    <li><a href="31-position-absolute.html"><span>31</span>Position Absolute</a></li>
+                    <li><a href="32-position-fixed.html"><span>32</span> Position Fixed</a></li>
+                    <li><a href="33-position-float.html"><span>33</span> Position Float</a></li>
+                    <li><a href="34-clear-float.html"><span>34</span> Clear Float</a></li>
+                    <li><a href="35-visualization.htm"><span>35</span> Visualization</a></li>
+                    <li><a href="36-overflow.html"><span>36</span> Overflow</a></li>
+                    <li><a href="37-z-index.html"><span>37</span> Index</a></li>
+                    <li><a href="38-typography-font-color.html"><span>38</span> Typography font color</a></li>
+                    <li><a href="39-typography-font-family.html"><span>39</span> Typography font family</a></li>
+                    <li><a href="40-typography-font-size.html"><span>40</span> Typography font size</a></li>
+                    <li><a href="41-typography-font-weight.html"><span>41</span> Typography font weight</a></li>
+                    <li><a href="42-text-align.html"><span>42</span> Text Aling</a></li>
+                    <li><a href="43-text-line-spacing.html"><span>43</span> Text line spacing</a></li>
+                    <li><a href="44-text-decoration-transform.html"><span>44</span> Text decoration</a></li>
+                    <li><a href="45-vertical-align.html"><span>45</span> Vertical aling</a></li>
+                    <li><a href="46-text-indent.html"><span>46</span> Text indent</a></li>
+                    <li><a href="47-text-spacing.html"><span>47</span> Text spacing</a></li>
+                    <li><a href="48-pseudoclasses.html"><span>48</span> Pseudiclasses</a></li>
+                    <li><a href="49-lists.html"><span>49</span> Lists</a></li>
+                    <li><a href="50-cursors.html"><span>50</span> Cursors</a></li>
+                    <li><a href="51-sprites.html"><span>51</span> Sprintes</a></li>
+                    <li><a href="52-challenge-sprites.html"><span>52</span> Challenge Sprites</a></li>
 
 
                 </ul>
