--- a/04-CSS3/02-border-radius.html
+++ b/04-CSS3/02-border-radius.html
@@ -6,6 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Border Radius</title>
     <link rel="stylesheet" href="css/master.css">
+    <style>
+        div.box {
+            background-color: rgba(0, 0, 0, 0.336);
+            border: 4px solid rgba(0, 0, 0, 0.486);
+            height: 180px;
+            margin: 0 auto;
+            width: 180px;
+        }
+        div.box1 {
+            border-radius: 50%;
+        }
+        div.box2 {
+            border-radius: 40px 0;
+        }
+        div.box3 {
+            border-radius: 130px 0 0 130px;
+        }
+        div.box4 {
+            border-radius: 130px 0 130px 130px;
+            /*transform: rotate(-45deg);
+            margin-top: 50px;*/
+        }
+    </style>
 </head>
 <body>
     <main>
@@ -13,7 +36,14 @@
             <h1><a href="index.html">🟠</a>Border Radius</h1>
         </header>
         <section>
-            <h2>Subtitle</h2>
+            <h2>border-radius: 50%</h2>
+            <div class="box box1"></div>
+            <h2>border-radius: 40px 0px</h2>
+            <div class="box box2"></div>
+            <h2>border-radius: 130px 0px 0px 130px</h2>
+            <div class="box box3"></div>
+            <h2>border-radius: 130px 0px 130px 130px</h2>
+            <div class="box box4"></div>
         </section>
     </main>
 </body>
