--- a/04-CSS3/03-box-shadows.html
+++ b/04-CSS3/03-box-shadows.html
@@ -6,6 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Box Shadows</title>
     <link rel="stylesheet" href="css/master.css">
+    <style>
+        div.box{
+            background-color: rgba(255, 255, 255, 0);
+            border: 4px solid rgba(0, 0, 0, 0.774);
+            height: 180px;
+            margin: 0 auto;
+            width: 180px;
+        }
+        div.box1{
+            box-shadow: 0 0 12px black;
+        }
+        div.box2{
+            box-shadow: -10px -10px 24px 4px black
+        }
+        div.box3{
+            box-shadow: 0 -4px 24px black inset
+        }
+        div.box4{
+            box-shadow: 4px 4px 0 4px rgb(0, 0, 0), 
+                        8px 8px 0 6px rgba(2, 2, 2, 0.445), 
+                        12px 12px 0 8px rgba(0, 0, 0, 0.219)
+
+        }
+    </style>
 </head>
 <body>
     <main>
@@ -13,7 +37,22 @@
             <h1><a href="index.html">🟠</a>Box Shadows</h1>
         </header>
         <section>
-            <h2>Subtitle</h2>
+            <h2>box-shadow: 0 0 12px black</h2>
+            <div class="box box1"></div>
+            <h2>box-shadow: -10px -10px 24px 4px black</h2>
+            <div class="box box2"></div>
+            <h2>box-shadow: 0 -4px 24px black inset</h2>
+            <div class="box box3"></div>
+            <h2>
+                box-shadow: 4px 4px 0 4px black,
+                            8px 8px 0 6px black,
+                            12px 12px 0 8px black
+            </h2>
+            <div class="box box4"></div>
+            
+           
+
+
         </section>
     </main>
 </body>
