--- a/04-CSS3/04-Challege-shadows.html
+++ b/04-CSS3/04-Challege-shadows.html
@@ -117,66 +117,66 @@
                         20px 80px 0 0 white,
                         40px 80px 0 0 white,
                         60px 80px 0 0 white,
-                        80px 80px 0 0 white,
-                        100px 80px 0 0 white,
-                        120px 80px 0 0 white,
-                        140px 80px 0 0 white,
-                        160px 80px 0 0 white,
-                        180px 80px 0 0 white,
-                        200px 80px 0 0 white,
-                        220px 80px 0 0 white,
-                        240px 80px 0 0 white,
-                        260px 80px 0 0 white,
-                        280px 80px 0 0 white,
-                        300px 80px 0 0 white,
-                        320px 80px 0 0 white,
+                        80px 80px 0 0 black,
+                        100px 80px 0 0 rgb(202, 53, 53),
+                        120px 80px 0 0 rgb(202, 53, 53),
+                        140px 80px 0 0 rgb(202, 53, 53),
+                        160px 80px 0 0 rgb(202, 53, 53),
+                        180px 80px 0 0 rgb(202, 53, 53),
+                        200px 80px 0 0 rgb(202, 53, 53),
+                        220px 80px 0 0 rgb(202, 53, 53),
+                        240px 80px 0 0 rgb(202, 53, 53),
+                        260px 80px 0 0 rgb(202, 53, 53),
+                        280px 80px 0 0 rgb(202, 53, 53),
+                        300px 80px 0 0 rgb(202, 53, 53),
+                        320px 80px 0 0 black,
                         340px 80px 0 0 white,
                         360px 80px 0 0 white,
                         380px 80px 0 0 white,
                         400px 80px 0 0 white,
 
                         0px 100px 0 0 white,
-                        20px 100px 0 0 white,
-                        40px 100px 0 0 white,
+                        20px 100px 0 0 black,
+                        40px 100px 0 0 black,
                         60px 100px 0 0 white,
-                        80px 100px 0 0 white,
-                        100px 100px 0 0 white,
-                        120px 100px 0 0 white,
-                        140px 100px 0 0 white,
-                        160px 100px 0 0 white,
-                        180px 100px 0 0 white,
-                        200px 100px 0 0 white,
-                        220px 100px 0 0 white,
-                        240px 100px 0 0 white,
-                        260px 100px 0 0 white,
-                        280px 100px 0 0 white,
-                        300px 100px 0 0 white,
-                        320px 100px 0 0 white,
+                        80px 100px 0 0 black,
+                        100px 100px 0 0 rgb(202, 53, 53),
+                        120px 100px 0 0 rgb(202, 53, 53),
+                        140px 100px 0 0 rgb(202, 53, 53),
+                        160px 100px 0 0 rgb(202, 53, 53),
+                        180px 100px 0 0 rgb(202, 53, 53),
+                        200px 100px 0 0 rgb(202, 53, 53),
+                        220px 100px 0 0 rgb(202, 53, 53),
+                        240px 100px 0 0 rgb(202, 53, 53),
+                        260px 100px 0 0 rgb(202, 53, 53),
+                        280px 100px 0 0 rgb(202, 53, 53),
+                        300px 100px 0 0 rgb(202, 53, 53),
+                        320px 100px 0 0 black,
                         340px 100px 0 0 white,
-                        360px 100px 0 0 white,
-                        380px 100px 0 0 white,
+                        360px 100px 0 0 black,
+                        380px 100px 0 0 black,
                         400px 100px 0 0 white,
 
                         0px 120px 0 0 white,
-                        20px 120px 0 0 white,
-                        40px 120px 0 0 white,
+                        20px 120px 0 0 black,
+                        40px 120px 0 0 rgb(202, 53, 53),
                         60px 120px 0 0 white,
-                        80px 120px 0 0 white,
-                        100px 120px 0 0 white,
-                        120px 120px 0 0 white,
-                        140px 120px 0 0 white,
-                        160px 120px 0 0 white,
-                        180px 120px 0 0 white,
-                        200px 120px 0 0 white,
-                        220px 120px 0 0 white,
-                        240px 120px 0 0 white,
-                        260px 120px 0 0 white,
-                        280px 120px 0 0 white,
-                        300px 120px 0 0 white,
-                        320px 120px 0 0 white,
-                        340px 120px 0 0 white,
-                        360px 120px 0 0 white,
-                        380px 120px 0 0 white,
+                        80px 120px 0 0 black,
+                        100px 120px 0 0 rgb(202, 53, 53),
+                        120px 120px 0 0 rgb(202, 53, 53),
+                        140px 120px 0 0 rgb(202, 53, 53),
+                        160px 120px 0 0 rgb(202, 53, 53),
+                        180px 120px 0 0 rgb(202, 53, 53),
+                        200px 120px 0 0 rgb(202, 53, 53),
+                        220px 120px 0 0 rgb(202, 53, 53),
+                        240px 120px 0 0 rgb(202, 53, 53),
+                        260px 120px 0 0 rgb(202, 53, 53),
+                        280px 120px 0 0 rgb(202, 53, 53),
+                        300px 120px 0 0 rgb(202, 53, 53),
+                        320px 120px 0 0 rgb(202, 53, 53),
+                        340px 120px 0 0 black,
+                        360px 120px 0 0 rgb(202, 53, 53),
+                        380px 120px 0 0 black,
                         400px 120px 0 0 white,
 
                         0px 100px 0 0 white,
