--- a/04-CSS3/04-Challege-shadows.html
+++ b/04-CSS3/04-Challege-shadows.html
@@ -14,9 +14,10 @@
         }
         div.squares{
             background: url(imgs/square.png);
-            opacity: 0.5;
+            opacity: 0.4;
             z-index: 2px;
-            height: 520px;
+            height: 540px;
+            width: 420px;
             margin-top: -20px;
         }
         div.flash{
@@ -640,7 +641,29 @@
                         340px 500px 0 0 white,
                         360px 500px 0 0 white,
                         380px 500px 0 0 white,
-                        400px 500px 0 0 white
+                        400px 500px 0 0 white,
+
+                        0px 520px 0 0 white,
+                        20px 520px 0 0 white,
+                        40px 520px 0 0 white,
+                        60px 520px 0 0 white,
+                        80px 520px 0 0 white,
+                        100px 520px 0 0 white,
+                        120px 520px 0 0 white,
+                        140px 520px 0 0 white,
+                        160px 520px 0 0 white,
+                        180px 520px 0 0 white,
+                        200px 520px 0 0 white,
+                        220px 520px 0 0 white,
+                        240px 520px 0 0 white,
+                        260px 520px 0 0 white,
+                        280px 520px 0 0 white,
+                        300px 520px 0 0 white,
+                        320px 520px 0 0 white,
+                        340px 520px 0 0 white,
+                        360px 520px 0 0 white,
+                        380px 520px 0 0 white,
+                        400px 520px 0 0 white
 
         }
     </style>
