--- a/04-CSS3/08-bg-gradient.html
+++ b/04-CSS3/08-bg-gradient.html
@@ -6,6 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Background Gradient</title>
     <link rel="stylesheet" href="css/master.css">
+    <style>
+        div.box{
+            border: 2px solid black;
+            height: 200px;
+            width: 380px;
+            margin: 20px auto;
+        }
+        div.box1{
+            background: linear-gradient(to top, rgb(221, 155, 155), rgb(144, 199, 212));
+        }
+        div.box2{
+            background: linear-gradient(45deg, rgb(221, 155, 155), rgb(175, 201, 29));
+        }
+        div.box3{
+            background: Linear-Gradient( yellow 40%, blue 40%, blue 70%, red 70%);
+        }
+        div.box4{
+            background: Linear-Gradient(/*155deg*/ to right, rgb(4, 10, 10) 50%, rgb(255, 237, 237) 50%);
+            /*background-size: 50px 100%;*/
+        }
+        div.box5{
+            background: radial-Gradient( circle, rgb(255, 252, 206), rgb(0, 4, 26));
+        }
+        div.box6{
+            background: radial-Gradient(red 5%, 
+                                        white 5%, 
+                                        white 10%,
+                                        black 10%, 
+                                        black 15%, 
+                                        white 15%, 
+                                        white 20%, 
+                                        black 20%, 
+                                        black 25%, 
+                                        white 25%, 
+                                        white 30%, 
+                                        black 30%, 
+                                        black 35%, 
+                                        white 35%, 
+                                        white 40%, 
+                                        black 40%, 
+                                        black 45%, 
+                                        white 45%, 
+                                        white 50%,
+                                        black 50%,
+                                        black 55%,
+                                        white 55%,
+                                        white 60%,
+                                        black 60%,
+                                        black 65%,
+                                        white 65%,
+                                        white 70%,
+                                        black 70%,
+                                        black 75%,
+                                        white 75%,
+                                        white 80%,
+                                        black 80%,
+                                        black 85%,
+                                        white 85%,
+                                        white 90%,
+                                        black 90%,
+                                        black 95%,
+                                        white 95%);
+        }
+    </style>
 </head>
 <body>
     <main>
@@ -13,7 +77,24 @@
             <h1><a href="index.html">🟠</a>Background Gradient</h1>
         </header>
         <section>
-            <h2>Subtitle</h2>
+            <h2>Linear-Gradient(to top, color1, color2)</h2>
+            <div class="box box1"></div>
+
+            <h2>Linear-Gradient(45deg, yellow, green)</h2>
+            <div class="box box2"></div>
+
+            <h2>Colombian Flag</h2>
+            <div class="box box3"></div>
+
+            <h2>Vertical Lines</h2>
+            <div class="box box4"></div>
+
+            <h2>Radial Gradient(circle, peru, crimson)</h2>
+            <div class="box box5"></div>
+
+            <h2>target shoot</h2>
+            <div class="box box6"></div>
+
         </section>
     </main>
 </body>
