--- a/04-CSS3/17-challenge-responsive.html
+++ b/04-CSS3/17-challenge-responsive.html
@@ -151,6 +151,7 @@
 				width: 280px;
 			}
 		}
+		/*Final Stilo*/
 	</style>
 </head>
 <body>
@@ -190,8 +191,10 @@
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia aspernatur quam reprehenderit beatae explicabo porro excepturi sunt, totam obcaecati culpa nisi quasi qui earum sint nam. Incidunt repellat sequi recusandae non dolorem, dolor ex minus eius ad veritatis earum, dicta vitae odit laudantium saepe hic et quam nobis maxime quod maiores fugit laboriosam magni amet. Labore laudantium dignissimos, laboriosam quisquam sequi beatae itaque officia quos praesentium distinctio doloremque, aut quae ex, veniam sit eaque accusamus. Sapiente quas quae amet quidem iusto nam ipsum nihil.
 					</p>
 				</div>
+				
 			</article>
 		</section>
 	</main>
 </body>
 </html>
+
