--- a/04-CSS3/index.html
+++ b/04-CSS3/index.html
@@ -64,6 +64,18 @@
             <li>
                 <a href="17-challenge-responsive.html"> <span>11</span> Challege Responsive</a>
             </li>
+            <li>
+                <a href="18-steps.html"> <span>18</span> Steps</a>
+            </li>
+            <li>
+                <a href="19-parallax.html"> <span>19</span> Parallax</a>
+            </li>
+            <li>
+                <a href="20-flexbox"> <span>20</span> Flexbox</a>
+            </li>
+            <li>
+                <a href="21-grids.html"> <span>21</span> Grids</a>
+            </li>
         </nav>
     </main>
 </body>
