--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <a href="02-HTML-401/">02 - HTML</a>
         <a href="03-CSS/">03 - CSS 2.1</a>
         <a href="04-CSS3/">04 - CSS 3</a>
-        <a href="#">05 - PUG</a>
-        <a href="#">06 - SASS</a>
-        <a href="#">07 - JavaScript</a>
+        <a href="05-pug/">05 - PUG</a>
+        <a href="06-sass/">06 - SASS</a>
+        <a href="07-javascript/">07 - JavaScript</a>
     </nav>
 </body>
 </html>
