--- a/07-javascript/index.html
+++ b/07-javascript/index.html
@@ -24,7 +24,7 @@
             {url: '02-comments.html', text: 'Comments'},
             {url: '03-get-elements.html', text: 'Get Elements'},
             {url: '04-variables.html', text: 'Variables'},
-            {url: '05-methods-objects.html', text: 'Methods Objects'},
+            {url: '05-method-object.html', text: 'Method Object'},
             {url: '06-types-objects.html', text: 'Types Objects'},
             {url: '07-vehicle-objects.html', text: 'Veichle Object'},
             {url: '08-functions.html', text: 'Functions'},
