--- a/07-javascript/09-challenge-calculator.html
+++ b/07-javascript/09-challenge-calculator.html
@@ -181,11 +181,18 @@
     <script>
         const display = document.querySelector('input.value')
 
+        
         const bracket = document.querySelector('button.brac' + 'button.ket')
 
         const back = document.querySelector('button.back')
         const clear = document.querySelector('button.btn-clear')
         const equal = document.querySelector('button.btn-equal')
+        function result() {
+            A = 10 + 10 + 10
+
+            var expresion = display
+            console.log(parseInt("11 +" + 10 + 1))
+        }
 
         const btnsNumbers=document.querySelectorAll('button[data-num]')
         const btnsOperators=document.querySelectorAll('button[data-opr]')
