--- a/07-javascript/09-challenge-calculator.html
+++ b/07-javascript/09-challenge-calculator.html
@@ -216,7 +216,7 @@
         }
 //events
         document.onkeyup = (evt) => {
-            //alert(evt.keyCode)
+            alert(evt.keyCode)
             switch (evt.keyCode) {
                 case 8:
                     deletLastValue()
