--- a/07-javascript/index.html
+++ b/07-javascript/index.html
@@ -28,7 +28,10 @@
             {url: '07-vehicle-objects.html', text: 'Vehicle Objects'},
             {url: '08-functions.html', text: 'Functions'},
             {url: '09-challenge-calculator.html', text: 'Challenge calculator'},
-            {url: '10-operators-arithmetic.html', text: 'Operators arithmetic'}
+            {url: '10-operators-arithmetic.html', text: 'Operators arithmetic'},
+            {url: '11-operators-assignment.html', text: 'Operators Assignment'},
+            {url: '12-operators-comparison.html', text: 'Operators Comparison'},
+
         ]
         links.forEach(renderlink)
 
