--- a/07-javascript/11-operators-assignment.html
+++ b/07-javascript/11-operators-assignment.html
@@ -138,12 +138,13 @@
                 }
             }
             else {
+                eqs[0].innerText=''
                 for (let i = 0; i < rss.length; i++) {
-                    resultX[i].innerText=''
-                    resultY[i].innerText=''
+                    rss[i].innerText=''
                 }
             }
         }
     </script>
 </body>
 </html>
+© 2022 GitHub, Inc.
