--- a/07-javascript/index.html
+++ b/07-javascript/index.html
@@ -31,6 +31,10 @@
             {url: '10-operators-arithmetic.html', text: 'Operators arithmetic'},
             {url: '11-operators-assignment.html', text: 'Operators Assignment'},
             {url: '12-operators-comparison.html', text: 'Operators Comparison'},
+            {url: '13-operators-logical.html', text: 'Operators Logical'},
+            {url: '14-conditionals.html', text: 'Conditionals'},
+            {url: '15-challenge-conditionals.html', text: 'Chanllenge Conditionals'},
+
 
         ]
         links.forEach(renderlink)
